fix sidebar icon not showing in mobile view

--- a/pigon-micro-web/src/styles/mobile.css
+++ b/pigon-micro-web/src/styles/mobile.css
@@ -17,7 +17,7 @@
     }
 
     .menuicon {
-        display: block;
+        display: block !important;
     }
 
     .mobilehidden {
